# vino_integration_demo

./: CMakeLists.txt  README.md  package.xml
launch/: demo_emotion_action.launch.py
src/: vino_integration.cpp  vino_integration_emotion.cpp  vino_transform.cpp
