<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
   <name>vino_integration</name>
   <version>0.0.1</version>
   <description>
   For testing
   </description>
   <maintainer email="skylerpan@gmail.com">Skyler Pan</maintainer>
   <license>Apache License 2.0</license>

   <buildtool_depend>ament_cmake</buildtool_depend>

   <build_depend>rclcpp</build_depend>
   <build_depend>rcutils</build_depend>
   <build_depend>rmw</build_depend>
   <build_depend>rmw_implementation_cmake</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>dynamic_vino_lib</build_depend>

   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rcutils</exec_depend>
   <exec_depend>rmw</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>dynamic_vino_lib</exec_depend>
   <exec_depend>neuronbot2_bringup</exec_depend>

   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
